[package]
name = "pogpen"
description = "renders parameter inputs and a markdown file to an easy-to-follow operations game plan"
version = "0.1.0"
authors = ["Liam Dawson <liam@liamdawson.me>"]

[dependencies]
pulldown-cmark = "0.0.14"
yaml-rust = "0.3.5"
clap = { version = "2.26.0", features = ["yaml"] }
handlebars = "0.26.2"
serde_derive = "1.0"
serde = "1.0"
